<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/application_preferences">

        <EditTextPreference
            android:key="username_preference"
            android:title="@string/title_username_preference"
            android:summary="@string/summary_username_preference"
            android:dialogTitle="@string/dialog_title_username_preference" />

        <EditTextPreference
            android:key="password_preference"
            android:title="@string/title_password_preference"
            android:inputType="textPassword"
            android:dialogTitle="@string/dialog_title_password_preference" />

        <EditTextPreference
            android:key="email_preference"
            android:title="@string/title_email_preference"
            android:summary="@string/summary_email_preference"
            android:inputType="textEmailAddress"
            android:dialogTitle="@string/dialog_title_email_preference" />

        <CheckBoxPreference
            android:key="student_member_preference"
            android:title="@string/title_student_member_preference"/>
    </PreferenceCategory>
</PreferenceScreen>