<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_above="@+id/resetButton"
        android:layout_alignParentEnd="false"
        android:layout_alignParentTop="true"
        android:baselineAligned="false">
        <LinearLayout
            android:id="@+id/linearLayoutA"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/border_team_a">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/enter_team_a"
                android:id="@+id/editTextA"
                android:scrollHorizontally="true"
                android:cursorVisible="false"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/score_text_a"
                android:freezesText="true"
                android:id="@+id/scoreTextViewA"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_margin="10dp" />
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/penalty_button_a"
                android:id="@+id/penaltyButtonA"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:clickable="true"
                android:layout_margin="10dp" />
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conversion_button_a"
                android:id="@+id/conversionButtonA"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|left"
                android:layout_margin="10dp" />
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/try_button_a"
                android:id="@+id/tryButtonA"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|left"
                android:layout_margin="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutB"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/border_team_b">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/enter_team_b"
                android:id="@+id/editTextB"
                android:layout_gravity="center_horizontal"
                android:cursorVisible="false"
                android:layout_margin="10dp"
                android:scrollHorizontally="true"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/score_text_b"
                android:freezesText="true"
                android:id="@+id/scoreTextViewB"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_margin="10dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/penalty_button_b"
                android:id="@+id/penaltyButtonB"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:layout_margin="10dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conversion_button_b"
                android:id="@+id/conversionButtonB"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|left"
                android:layout_margin="10dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/try_button_b"
                android:id="@+id/tryButtonB"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|left"
                android:layout_margin="10dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rugby_reset_button"
        android:id="@+id/resetButton"
        android:minWidth="100dp"
        android:layout_alignTop="@+id/saveDataButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="90dp"
        android:layout_alignParentBottom="false"
        android:layout_alignWithParentIfMissing="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_data_button"
        android:id="@+id/saveDataButton"
        android:layout_marginBottom="50dp"
        android:minWidth="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="false"
        android:layout_marginRight="50dp" />
</RelativeLayout>