<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/darkGrey"
        android:id="@+id/relativeLayout">
        <FrameLayout
            android:layout_width="125dp"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/customborder"
            android:layout_centerHorizontal="true"
            android:layout_margin="2dp"
            android:id="@+id/frameLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Timer"
                android:id="@+id/textViewTime"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:textColor="@color/darkBlue"
                android:textStyle="bold|normal" />
        </FrameLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/Start"
            android:background="@color/green"
            android:id="@+id/btnStart"
            android:layout_gravity="center_horizontal|top"
            android:textColor="@color/white"
            android:layout_alignTop="@+id/frameLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentEnd="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/Stop"
            android:background="@color/red"
            android:id="@+id/btnStop"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_below="@+id/tab"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/linearLayout3"
        android:id="@+id/relativeLayout1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/armB"
            android:baselineAligned="false">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageButton
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/imageButton_BtoC"
                    android:background="@drawable/arrow_b_to_c"
                    android:contentDescription="@string/arrow_b_to_c" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/count_text"
                    android:textColor="@color/indigo"
                    android:id="@+id/textViewVehsBtoC"
                    android:textIsSelectable="false"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageButton
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/imageButton_BtoA"
                    android:background="@drawable/arrow_b_to_a"
                    android:contentDescription="@string/arrow_b_to_a" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/count_text"
                    android:textColor="@color/indigo"
                    android:id="@+id/textViewVehsBtoA"
                    android:textIsSelectable="false"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/armC">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageButton
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/imageButton_CtoA"
                    android:background="@drawable/arrow_c_to_a"
                    android:contentDescription="@string/arrow_c_to_a" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/count_text"
                    android:textColor="@color/darkGreen"
                    android:id="@+id/textViewVehsCtoA"
                    android:textIsSelectable="false"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageButton
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/imageButton_CtoB"
                    android:background="@drawable/arrow_c_to_b"
                    android:contentDescription="@string/arrow_c_to_b" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/count_text"
                    android:textColor="@color/darkGreen"
                    android:id="@+id/textViewVehsCtoB"
                    android:textIsSelectable="false"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/armA">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageButton
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/imageButton_AtoC"
                    android:background="@drawable/arrow_a_to_c"
                    android:contentDescription="@string/arrow_a_to_c" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/count_text"
                    android:textColor="@color/orange"
                    android:id="@+id/textViewVehsAtoC"
                    android:textIsSelectable="false"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageButton
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/imageButton_AtoB"
                    android:background="@drawable/arrow_a_to_b"
                    android:contentDescription="@string/arrow_a_to_b" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/count_text"
                    android:textColor="@color/orange"
                    android:id="@+id/textViewVehsAtoB"
                    android:textIsSelectable="false"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="500dp"
            android:background="@color/grey"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/armA"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/armA_name"
                android:textColor="@color/orange"
                android:id="@+id/textViewArmAName"
                android:ems="10"
                android:layout_gravity="right|bottom"
                android:gravity="right"
                android:enabled="true"
                android:textSize="20sp"
                android:textStyle="bold" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/armC"
            android:layout_toLeftOf="@+id/armB"
            android:layout_toStartOf="@+id/armB">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/armC_name"
                android:textColor="@color/darkGreen"
                android:id="@+id/textViewArmCName"
                android:ems="10"
                android:layout_gravity="left|top"
                android:textSize="20sp"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/armA"
            android:layout_toRightOf="@+id/armB"
            android:layout_toEndOf="@+id/armB">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/armB_name"
                android:textColor="@color/indigo"
                android:id="@+id/textViewArmBName"
                android:ems="10"
                android:layout_gravity="left|bottom"
                android:textSize="20sp"
                android:textStyle="bold" />
        </FrameLayout>
    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/darkGrey"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_button"
            android:id="@+id/button_ResetCountData"
            android:layout_marginLeft="10dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add"
            android:id="@+id/button_AddToDb"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:id="@+id/button_ViewAllData"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp" />
    </RelativeLayout>
</RelativeLayout>